// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:tokenize > should work with constructs (0) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 1,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 1,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "lineEnding",
      "value": "\\n",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 1,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 1,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "lineEnding",
      "value": "\\n",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 1,
        "line": 3,
        "offset": 3,
      },
      "start": {
        "_bufferIndex": 1,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 1,
      },
      "type": "lineEnding",
      "value": "\\r\\n",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 1,
        "line": 3,
        "offset": 3,
      },
      "start": {
        "_bufferIndex": 1,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 1,
      },
      "type": "lineEnding",
      "value": "\\r\\n",
    },
  ],
]
`;

exports[`integration:tokenize > should work with constructs (1) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 12,
        "_index": 0,
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "long": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "--standalone",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 12,
        "_index": 0,
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "long": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "--standalone",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "_bufferIndex": 13,
        "_index": 0,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "_bufferIndex": 13,
        "_index": 0,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "type": "operand",
      "value": "",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "_bufferIndex": 13,
        "_index": 0,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "_bufferIndex": 13,
        "_index": 0,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "type": "operand",
      "value": "",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "type": "eof",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "type": "eof",
    },
  ],
]
`;

exports[`integration:tokenize > should work with constructs (2) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "long": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "--debug",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "long": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "--debug",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 7,
        "_index": 1,
        "column": 16,
        "line": 1,
        "offset": 15,
      },
      "long": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 1,
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "type": "flag",
      "value": "--color",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 7,
        "_index": 1,
        "column": 16,
        "line": 1,
        "offset": 15,
      },
      "long": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 1,
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "type": "flag",
      "value": "--color",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": {
        "_bufferIndex": 8,
        "_index": 1,
        "column": 17,
        "line": 1,
        "offset": 16,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": {
        "_bufferIndex": 8,
        "_index": 1,
        "column": 17,
        "line": 1,
        "offset": 16,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "type": "eof",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "type": "eof",
    },
  ],
]
`;

exports[`integration:tokenize > should work with constructs (3) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 5,
        "_index": 0,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "long": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 5,
        "_index": 0,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "long": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "_bufferIndex": 6,
        "_index": 0,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "_bufferIndex": 6,
        "_index": 0,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "operand",
      "value": "",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "_bufferIndex": 6,
        "_index": 0,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "_bufferIndex": 6,
        "_index": 0,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "operand",
      "value": "",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 1,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "operand",
      "value": "0",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 1,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "operand",
      "value": "0",
    },
  ],
]
`;

exports[`integration:tokenize > should work with constructs (4) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "long": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "--project",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "long": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "--project",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 1,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "type": "operand",
      "value": "@flex-development/vfile-tokenizer",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 1,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "type": "operand",
      "value": "@flex-development/vfile-tokenizer",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "type": "eof",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": -1,
        "_index": 2,
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "type": "eof",
    },
  ],
]
`;

exports[`integration:tokenize > should work with constructs (5) 1`] = `
[
  [
    "enter",
    {
      "emoji": "🏗️",
      "end": {
        "_bufferIndex": 23,
        "_index": 0,
        "column": 24,
        "line": 1,
        "offset": 23,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "shortcode",
      "value": ":building_construction:",
    },
  ],
  [
    "exit",
    {
      "emoji": "🏗️",
      "end": {
        "_bufferIndex": 23,
        "_index": 0,
        "column": 24,
        "line": 1,
        "offset": 23,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "shortcode",
      "value": ":building_construction:",
    },
  ],
  [
    "enter",
    {
      "emoji": "📦",
      "end": {
        "_bufferIndex": 33,
        "_index": 0,
        "column": 34,
        "line": 1,
        "offset": 33,
      },
      "start": {
        "_bufferIndex": 24,
        "_index": 0,
        "column": 25,
        "line": 1,
        "offset": 24,
      },
      "type": "shortcode",
      "value": ":package:",
    },
  ],
  [
    "exit",
    {
      "emoji": "📦",
      "end": {
        "_bufferIndex": 33,
        "_index": 0,
        "column": 34,
        "line": 1,
        "offset": 33,
      },
      "start": {
        "_bufferIndex": 24,
        "_index": 0,
        "column": 25,
        "line": 1,
        "offset": 24,
      },
      "type": "shortcode",
      "value": ":package:",
    },
  ],
  [
    "enter",
    {
      "emoji": "👍",
      "end": {
        "_bufferIndex": 53,
        "_index": 0,
        "column": 8,
        "line": 3,
        "offset": 53,
      },
      "start": {
        "_bufferIndex": 49,
        "_index": 0,
        "column": 4,
        "line": 3,
        "offset": 49,
      },
      "type": "shortcode",
      "value": ":+1:",
    },
  ],
  [
    "exit",
    {
      "emoji": "👍",
      "end": {
        "_bufferIndex": 53,
        "_index": 0,
        "column": 8,
        "line": 3,
        "offset": 53,
      },
      "start": {
        "_bufferIndex": 49,
        "_index": 0,
        "column": 4,
        "line": 3,
        "offset": 49,
      },
      "type": "shortcode",
      "value": ":+1:",
    },
  ],
]
`;

exports[`integration:tokenize > should work with constructs (6) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 42,
        "_index": 0,
        "column": 23,
        "line": 4,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "codeIndented",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 4,
        "_index": 0,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "linePrefix",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 4,
        "_index": 0,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "linePrefix",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 17,
        "_index": 0,
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": {
        "_bufferIndex": 4,
        "_index": 0,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 17,
        "_index": 0,
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": {
        "_bufferIndex": 4,
        "_index": 0,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 18,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 18,
      },
      "start": {
        "_bufferIndex": 17,
        "_index": 0,
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "type": "lineEnding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 18,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 18,
      },
      "start": {
        "_bufferIndex": 17,
        "_index": 0,
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "type": "lineEnding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 19,
        "_index": 0,
        "column": 1,
        "line": 3,
        "offset": 19,
      },
      "start": {
        "_bufferIndex": 18,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 18,
      },
      "type": "lineEnding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 19,
        "_index": 0,
        "column": 1,
        "line": 3,
        "offset": 19,
      },
      "start": {
        "_bufferIndex": 18,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 18,
      },
      "type": "lineEnding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 20,
        "_index": 0,
        "column": 1,
        "line": 4,
        "offset": 20,
      },
      "start": {
        "_bufferIndex": 19,
        "_index": 0,
        "column": 1,
        "line": 3,
        "offset": 19,
      },
      "type": "lineEnding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 20,
        "_index": 0,
        "column": 1,
        "line": 4,
        "offset": 20,
      },
      "start": {
        "_bufferIndex": 19,
        "_index": 0,
        "column": 1,
        "line": 3,
        "offset": 19,
      },
      "type": "lineEnding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 24,
        "_index": 0,
        "column": 5,
        "line": 4,
        "offset": 24,
      },
      "start": {
        "_bufferIndex": 20,
        "_index": 0,
        "column": 1,
        "line": 4,
        "offset": 20,
      },
      "type": "linePrefix",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 24,
        "_index": 0,
        "column": 5,
        "line": 4,
        "offset": 24,
      },
      "start": {
        "_bufferIndex": 20,
        "_index": 0,
        "column": 1,
        "line": 4,
        "offset": 20,
      },
      "type": "linePrefix",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 42,
        "_index": 0,
        "column": 23,
        "line": 4,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": 24,
        "_index": 0,
        "column": 5,
        "line": 4,
        "offset": 24,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 42,
        "_index": 0,
        "column": 23,
        "line": 4,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": 24,
        "_index": 0,
        "column": 5,
        "line": 4,
        "offset": 24,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 42,
        "_index": 0,
        "column": 23,
        "line": 4,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "codeIndented",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 86,
        "_index": 0,
        "column": 14,
        "line": 8,
        "offset": 86,
      },
      "start": {
        "_bufferIndex": 62,
        "_index": 0,
        "column": 1,
        "line": 7,
        "offset": 62,
      },
      "type": "codeIndented",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 66,
        "_index": 0,
        "column": 5,
        "line": 7,
        "offset": 66,
      },
      "start": {
        "_bufferIndex": 62,
        "_index": 0,
        "column": 1,
        "line": 7,
        "offset": 62,
      },
      "type": "linePrefix",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 66,
        "_index": 0,
        "column": 5,
        "line": 7,
        "offset": 66,
      },
      "start": {
        "_bufferIndex": 62,
        "_index": 0,
        "column": 1,
        "line": 7,
        "offset": 62,
      },
      "type": "linePrefix",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 72,
        "_index": 0,
        "column": 11,
        "line": 7,
        "offset": 72,
      },
      "start": {
        "_bufferIndex": 66,
        "_index": 0,
        "column": 5,
        "line": 7,
        "offset": 66,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 72,
        "_index": 0,
        "column": 11,
        "line": 7,
        "offset": 72,
      },
      "start": {
        "_bufferIndex": 66,
        "_index": 0,
        "column": 5,
        "line": 7,
        "offset": 66,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 73,
        "_index": 0,
        "column": 1,
        "line": 8,
        "offset": 73,
      },
      "start": {
        "_bufferIndex": 72,
        "_index": 0,
        "column": 11,
        "line": 7,
        "offset": 72,
      },
      "type": "lineEnding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 73,
        "_index": 0,
        "column": 1,
        "line": 8,
        "offset": 73,
      },
      "start": {
        "_bufferIndex": 72,
        "_index": 0,
        "column": 11,
        "line": 7,
        "offset": 72,
      },
      "type": "lineEnding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 77,
        "_index": 0,
        "column": 5,
        "line": 8,
        "offset": 77,
      },
      "start": {
        "_bufferIndex": 73,
        "_index": 0,
        "column": 1,
        "line": 8,
        "offset": 73,
      },
      "type": "linePrefix",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 77,
        "_index": 0,
        "column": 5,
        "line": 8,
        "offset": 77,
      },
      "start": {
        "_bufferIndex": 73,
        "_index": 0,
        "column": 1,
        "line": 8,
        "offset": 73,
      },
      "type": "linePrefix",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 86,
        "_index": 0,
        "column": 14,
        "line": 8,
        "offset": 86,
      },
      "start": {
        "_bufferIndex": 77,
        "_index": 0,
        "column": 5,
        "line": 8,
        "offset": 77,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 86,
        "_index": 0,
        "column": 14,
        "line": 8,
        "offset": 86,
      },
      "start": {
        "_bufferIndex": 77,
        "_index": 0,
        "column": 5,
        "line": 8,
        "offset": 77,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 86,
        "_index": 0,
        "column": 14,
        "line": 8,
        "offset": 86,
      },
      "start": {
        "_bufferIndex": 62,
        "_index": 0,
        "column": 1,
        "line": 7,
        "offset": 62,
      },
      "type": "codeIndented",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 148,
        "_index": 0,
        "column": 17,
        "line": 14,
        "offset": 145,
      },
      "start": {
        "_bufferIndex": 106,
        "_index": 0,
        "column": 1,
        "line": 13,
        "offset": 105,
      },
      "type": "codeIndented",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 110,
        "_index": 0,
        "column": 5,
        "line": 13,
        "offset": 108,
      },
      "start": {
        "_bufferIndex": 106,
        "_index": 0,
        "column": 1,
        "line": 13,
        "offset": 105,
      },
      "type": "linePrefix",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 110,
        "_index": 0,
        "column": 5,
        "line": 13,
        "offset": 108,
      },
      "start": {
        "_bufferIndex": 106,
        "_index": 0,
        "column": 1,
        "line": 13,
        "offset": 105,
      },
      "type": "linePrefix",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 131,
        "_index": 0,
        "column": 26,
        "line": 13,
        "offset": 129,
      },
      "start": {
        "_bufferIndex": 110,
        "_index": 0,
        "column": 5,
        "line": 13,
        "offset": 108,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 131,
        "_index": 0,
        "column": 26,
        "line": 13,
        "offset": 129,
      },
      "start": {
        "_bufferIndex": 110,
        "_index": 0,
        "column": 5,
        "line": 13,
        "offset": 108,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 132,
        "_index": 0,
        "column": 1,
        "line": 14,
        "offset": 130,
      },
      "start": {
        "_bufferIndex": 131,
        "_index": 0,
        "column": 26,
        "line": 13,
        "offset": 129,
      },
      "type": "lineEnding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 132,
        "_index": 0,
        "column": 1,
        "line": 14,
        "offset": 130,
      },
      "start": {
        "_bufferIndex": 131,
        "_index": 0,
        "column": 26,
        "line": 13,
        "offset": 129,
      },
      "type": "lineEnding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 136,
        "_index": 0,
        "column": 5,
        "line": 14,
        "offset": 133,
      },
      "start": {
        "_bufferIndex": 132,
        "_index": 0,
        "column": 1,
        "line": 14,
        "offset": 130,
      },
      "type": "linePrefix",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 136,
        "_index": 0,
        "column": 5,
        "line": 14,
        "offset": 133,
      },
      "start": {
        "_bufferIndex": 132,
        "_index": 0,
        "column": 1,
        "line": 14,
        "offset": 130,
      },
      "type": "linePrefix",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 148,
        "_index": 0,
        "column": 17,
        "line": 14,
        "offset": 145,
      },
      "start": {
        "_bufferIndex": 136,
        "_index": 0,
        "column": 5,
        "line": 14,
        "offset": 133,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 148,
        "_index": 0,
        "column": 17,
        "line": 14,
        "offset": 145,
      },
      "start": {
        "_bufferIndex": 136,
        "_index": 0,
        "column": 5,
        "line": 14,
        "offset": 133,
      },
      "type": "codeFlowValue",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 148,
        "_index": 0,
        "column": 17,
        "line": 14,
        "offset": 145,
      },
      "start": {
        "_bufferIndex": 106,
        "_index": 0,
        "column": 1,
        "line": 13,
        "offset": 105,
      },
      "type": "codeIndented",
    },
  ],
]
`;

exports[`integration:tokenize > should work with constructs (7) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 30,
        "_index": 0,
        "column": 31,
        "line": 1,
        "offset": 30,
      },
      "start": {
        "_bufferIndex": 27,
        "_index": 0,
        "column": 28,
        "line": 1,
        "offset": 27,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 28,
        "_index": 0,
        "column": 29,
        "line": 1,
        "offset": 28,
      },
      "start": {
        "_bufferIndex": 27,
        "_index": 0,
        "column": 28,
        "line": 1,
        "offset": 27,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 28,
        "_index": 0,
        "column": 29,
        "line": 1,
        "offset": 28,
      },
      "start": {
        "_bufferIndex": 27,
        "_index": 0,
        "column": 28,
        "line": 1,
        "offset": 27,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 29,
        "_index": 0,
        "column": 30,
        "line": 1,
        "offset": 29,
      },
      "start": {
        "_bufferIndex": 28,
        "_index": 0,
        "column": 29,
        "line": 1,
        "offset": 28,
      },
      "type": "codeTextData",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 29,
        "_index": 0,
        "column": 30,
        "line": 1,
        "offset": 29,
      },
      "start": {
        "_bufferIndex": 28,
        "_index": 0,
        "column": 29,
        "line": 1,
        "offset": 28,
      },
      "type": "codeTextData",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 30,
        "_index": 0,
        "column": 31,
        "line": 1,
        "offset": 30,
      },
      "start": {
        "_bufferIndex": 29,
        "_index": 0,
        "column": 30,
        "line": 1,
        "offset": 29,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 30,
        "_index": 0,
        "column": 31,
        "line": 1,
        "offset": 30,
      },
      "start": {
        "_bufferIndex": 29,
        "_index": 0,
        "column": 30,
        "line": 1,
        "offset": 29,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 30,
        "_index": 0,
        "column": 31,
        "line": 1,
        "offset": 30,
      },
      "start": {
        "_bufferIndex": 27,
        "_index": 0,
        "column": 28,
        "line": 1,
        "offset": 27,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 36,
        "_index": 0,
        "column": 37,
        "line": 1,
        "offset": 36,
      },
      "start": {
        "_bufferIndex": 32,
        "_index": 0,
        "column": 33,
        "line": 1,
        "offset": 32,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 33,
        "_index": 0,
        "column": 34,
        "line": 1,
        "offset": 33,
      },
      "start": {
        "_bufferIndex": 32,
        "_index": 0,
        "column": 33,
        "line": 1,
        "offset": 32,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 33,
        "_index": 0,
        "column": 34,
        "line": 1,
        "offset": 33,
      },
      "start": {
        "_bufferIndex": 32,
        "_index": 0,
        "column": 33,
        "line": 1,
        "offset": 32,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 35,
        "_index": 0,
        "column": 36,
        "line": 1,
        "offset": 35,
      },
      "start": {
        "_bufferIndex": 33,
        "_index": 0,
        "column": 34,
        "line": 1,
        "offset": 33,
      },
      "type": "codeTextData",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 35,
        "_index": 0,
        "column": 36,
        "line": 1,
        "offset": 35,
      },
      "start": {
        "_bufferIndex": 33,
        "_index": 0,
        "column": 34,
        "line": 1,
        "offset": 33,
      },
      "type": "codeTextData",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 36,
        "_index": 0,
        "column": 37,
        "line": 1,
        "offset": 36,
      },
      "start": {
        "_bufferIndex": 35,
        "_index": 0,
        "column": 36,
        "line": 1,
        "offset": 35,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 36,
        "_index": 0,
        "column": 37,
        "line": 1,
        "offset": 36,
      },
      "start": {
        "_bufferIndex": 35,
        "_index": 0,
        "column": 36,
        "line": 1,
        "offset": 35,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 36,
        "_index": 0,
        "column": 37,
        "line": 1,
        "offset": 36,
      },
      "start": {
        "_bufferIndex": 32,
        "_index": 0,
        "column": 33,
        "line": 1,
        "offset": 32,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 42,
        "_index": 0,
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": 38,
        "_index": 0,
        "column": 39,
        "line": 1,
        "offset": 38,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 39,
        "_index": 0,
        "column": 40,
        "line": 1,
        "offset": 39,
      },
      "start": {
        "_bufferIndex": 38,
        "_index": 0,
        "column": 39,
        "line": 1,
        "offset": 38,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 39,
        "_index": 0,
        "column": 40,
        "line": 1,
        "offset": 39,
      },
      "start": {
        "_bufferIndex": 38,
        "_index": 0,
        "column": 39,
        "line": 1,
        "offset": 38,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 41,
        "_index": 0,
        "column": 42,
        "line": 1,
        "offset": 41,
      },
      "start": {
        "_bufferIndex": 39,
        "_index": 0,
        "column": 40,
        "line": 1,
        "offset": 39,
      },
      "type": "codeTextData",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 41,
        "_index": 0,
        "column": 42,
        "line": 1,
        "offset": 41,
      },
      "start": {
        "_bufferIndex": 39,
        "_index": 0,
        "column": 40,
        "line": 1,
        "offset": 39,
      },
      "type": "codeTextData",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 42,
        "_index": 0,
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": 41,
        "_index": 0,
        "column": 42,
        "line": 1,
        "offset": 41,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 42,
        "_index": 0,
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": 41,
        "_index": 0,
        "column": 42,
        "line": 1,
        "offset": 41,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 42,
        "_index": 0,
        "column": 43,
        "line": 1,
        "offset": 42,
      },
      "start": {
        "_bufferIndex": 38,
        "_index": 0,
        "column": 39,
        "line": 1,
        "offset": 38,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 49,
        "_index": 0,
        "column": 50,
        "line": 1,
        "offset": 49,
      },
      "start": {
        "_bufferIndex": 44,
        "_index": 0,
        "column": 45,
        "line": 1,
        "offset": 44,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 45,
        "_index": 0,
        "column": 46,
        "line": 1,
        "offset": 45,
      },
      "start": {
        "_bufferIndex": 44,
        "_index": 0,
        "column": 45,
        "line": 1,
        "offset": 44,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 45,
        "_index": 0,
        "column": 46,
        "line": 1,
        "offset": 45,
      },
      "start": {
        "_bufferIndex": 44,
        "_index": 0,
        "column": 45,
        "line": 1,
        "offset": 44,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 46,
        "_index": 0,
        "column": 47,
        "line": 1,
        "offset": 46,
      },
      "start": {
        "_bufferIndex": 45,
        "_index": 0,
        "column": 46,
        "line": 1,
        "offset": 45,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 46,
        "_index": 0,
        "column": 47,
        "line": 1,
        "offset": 46,
      },
      "start": {
        "_bufferIndex": 45,
        "_index": 0,
        "column": 46,
        "line": 1,
        "offset": 45,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 47,
        "_index": 0,
        "column": 48,
        "line": 1,
        "offset": 47,
      },
      "start": {
        "_bufferIndex": 46,
        "_index": 0,
        "column": 47,
        "line": 1,
        "offset": 46,
      },
      "type": "codeTextData",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 47,
        "_index": 0,
        "column": 48,
        "line": 1,
        "offset": 47,
      },
      "start": {
        "_bufferIndex": 46,
        "_index": 0,
        "column": 47,
        "line": 1,
        "offset": 46,
      },
      "type": "codeTextData",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 48,
        "_index": 0,
        "column": 49,
        "line": 1,
        "offset": 48,
      },
      "start": {
        "_bufferIndex": 47,
        "_index": 0,
        "column": 48,
        "line": 1,
        "offset": 47,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 48,
        "_index": 0,
        "column": 49,
        "line": 1,
        "offset": 48,
      },
      "start": {
        "_bufferIndex": 47,
        "_index": 0,
        "column": 48,
        "line": 1,
        "offset": 47,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 49,
        "_index": 0,
        "column": 50,
        "line": 1,
        "offset": 49,
      },
      "start": {
        "_bufferIndex": 48,
        "_index": 0,
        "column": 49,
        "line": 1,
        "offset": 48,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 49,
        "_index": 0,
        "column": 50,
        "line": 1,
        "offset": 49,
      },
      "start": {
        "_bufferIndex": 48,
        "_index": 0,
        "column": 49,
        "line": 1,
        "offset": 48,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 49,
        "_index": 0,
        "column": 50,
        "line": 1,
        "offset": 49,
      },
      "start": {
        "_bufferIndex": 44,
        "_index": 0,
        "column": 45,
        "line": 1,
        "offset": 44,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 56,
        "_index": 0,
        "column": 2,
        "line": 2,
        "offset": 56,
      },
      "start": {
        "_bufferIndex": 51,
        "_index": 0,
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 52,
        "_index": 0,
        "column": 53,
        "line": 1,
        "offset": 52,
      },
      "start": {
        "_bufferIndex": 51,
        "_index": 0,
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 52,
        "_index": 0,
        "column": 53,
        "line": 1,
        "offset": 52,
      },
      "start": {
        "_bufferIndex": 51,
        "_index": 0,
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 53,
        "_index": 0,
        "column": 54,
        "line": 1,
        "offset": 53,
      },
      "start": {
        "_bufferIndex": 52,
        "_index": 0,
        "column": 53,
        "line": 1,
        "offset": 52,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 53,
        "_index": 0,
        "column": 54,
        "line": 1,
        "offset": 53,
      },
      "start": {
        "_bufferIndex": 52,
        "_index": 0,
        "column": 53,
        "line": 1,
        "offset": 52,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 54,
        "_index": 0,
        "column": 55,
        "line": 1,
        "offset": 54,
      },
      "start": {
        "_bufferIndex": 53,
        "_index": 0,
        "column": 54,
        "line": 1,
        "offset": 53,
      },
      "type": "codeTextData",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 54,
        "_index": 0,
        "column": 55,
        "line": 1,
        "offset": 54,
      },
      "start": {
        "_bufferIndex": 53,
        "_index": 0,
        "column": 54,
        "line": 1,
        "offset": 53,
      },
      "type": "codeTextData",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 55,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 55,
      },
      "start": {
        "_bufferIndex": 54,
        "_index": 0,
        "column": 55,
        "line": 1,
        "offset": 54,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 55,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 55,
      },
      "start": {
        "_bufferIndex": 54,
        "_index": 0,
        "column": 55,
        "line": 1,
        "offset": 54,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 56,
        "_index": 0,
        "column": 2,
        "line": 2,
        "offset": 56,
      },
      "start": {
        "_bufferIndex": 55,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 55,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 56,
        "_index": 0,
        "column": 2,
        "line": 2,
        "offset": 56,
      },
      "start": {
        "_bufferIndex": 55,
        "_index": 0,
        "column": 1,
        "line": 2,
        "offset": 55,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 56,
        "_index": 0,
        "column": 2,
        "line": 2,
        "offset": 56,
      },
      "start": {
        "_bufferIndex": 51,
        "_index": 0,
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 63,
        "_index": 0,
        "column": 2,
        "line": 3,
        "offset": 63,
      },
      "start": {
        "_bufferIndex": 58,
        "_index": 0,
        "column": 4,
        "line": 2,
        "offset": 58,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 59,
        "_index": 0,
        "column": 5,
        "line": 2,
        "offset": 59,
      },
      "start": {
        "_bufferIndex": 58,
        "_index": 0,
        "column": 4,
        "line": 2,
        "offset": 58,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 59,
        "_index": 0,
        "column": 5,
        "line": 2,
        "offset": 59,
      },
      "start": {
        "_bufferIndex": 58,
        "_index": 0,
        "column": 4,
        "line": 2,
        "offset": 58,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 60,
        "_index": 0,
        "column": 6,
        "line": 2,
        "offset": 60,
      },
      "start": {
        "_bufferIndex": 59,
        "_index": 0,
        "column": 5,
        "line": 2,
        "offset": 59,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 60,
        "_index": 0,
        "column": 6,
        "line": 2,
        "offset": 60,
      },
      "start": {
        "_bufferIndex": 59,
        "_index": 0,
        "column": 5,
        "line": 2,
        "offset": 59,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 61,
        "_index": 0,
        "column": 7,
        "line": 2,
        "offset": 61,
      },
      "start": {
        "_bufferIndex": 60,
        "_index": 0,
        "column": 6,
        "line": 2,
        "offset": 60,
      },
      "type": "codeTextData",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 61,
        "_index": 0,
        "column": 7,
        "line": 2,
        "offset": 61,
      },
      "start": {
        "_bufferIndex": 60,
        "_index": 0,
        "column": 6,
        "line": 2,
        "offset": 60,
      },
      "type": "codeTextData",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 62,
        "_index": 0,
        "column": 1,
        "line": 3,
        "offset": 62,
      },
      "start": {
        "_bufferIndex": 61,
        "_index": 0,
        "column": 7,
        "line": 2,
        "offset": 61,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 62,
        "_index": 0,
        "column": 1,
        "line": 3,
        "offset": 62,
      },
      "start": {
        "_bufferIndex": 61,
        "_index": 0,
        "column": 7,
        "line": 2,
        "offset": 61,
      },
      "type": "codeTextPadding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 63,
        "_index": 0,
        "column": 2,
        "line": 3,
        "offset": 63,
      },
      "start": {
        "_bufferIndex": 62,
        "_index": 0,
        "column": 1,
        "line": 3,
        "offset": 62,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 63,
        "_index": 0,
        "column": 2,
        "line": 3,
        "offset": 63,
      },
      "start": {
        "_bufferIndex": 62,
        "_index": 0,
        "column": 1,
        "line": 3,
        "offset": 62,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 63,
        "_index": 0,
        "column": 2,
        "line": 3,
        "offset": 63,
      },
      "start": {
        "_bufferIndex": 58,
        "_index": 0,
        "column": 4,
        "line": 2,
        "offset": 58,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 69,
        "_index": 0,
        "column": 2,
        "line": 4,
        "offset": 69,
      },
      "start": {
        "_bufferIndex": 65,
        "_index": 0,
        "column": 4,
        "line": 3,
        "offset": 65,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 66,
        "_index": 0,
        "column": 5,
        "line": 3,
        "offset": 66,
      },
      "start": {
        "_bufferIndex": 65,
        "_index": 0,
        "column": 4,
        "line": 3,
        "offset": 65,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 66,
        "_index": 0,
        "column": 5,
        "line": 3,
        "offset": 66,
      },
      "start": {
        "_bufferIndex": 65,
        "_index": 0,
        "column": 4,
        "line": 3,
        "offset": 65,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 67,
        "_index": 0,
        "column": 6,
        "line": 3,
        "offset": 67,
      },
      "start": {
        "_bufferIndex": 66,
        "_index": 0,
        "column": 5,
        "line": 3,
        "offset": 66,
      },
      "type": "codeTextData",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 67,
        "_index": 0,
        "column": 6,
        "line": 3,
        "offset": 67,
      },
      "start": {
        "_bufferIndex": 66,
        "_index": 0,
        "column": 5,
        "line": 3,
        "offset": 66,
      },
      "type": "codeTextData",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 68,
        "_index": 0,
        "column": 1,
        "line": 4,
        "offset": 68,
      },
      "start": {
        "_bufferIndex": 67,
        "_index": 0,
        "column": 6,
        "line": 3,
        "offset": 67,
      },
      "type": "lineEnding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 68,
        "_index": 0,
        "column": 1,
        "line": 4,
        "offset": 68,
      },
      "start": {
        "_bufferIndex": 67,
        "_index": 0,
        "column": 6,
        "line": 3,
        "offset": 67,
      },
      "type": "lineEnding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 69,
        "_index": 0,
        "column": 2,
        "line": 4,
        "offset": 69,
      },
      "start": {
        "_bufferIndex": 68,
        "_index": 0,
        "column": 1,
        "line": 4,
        "offset": 68,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 69,
        "_index": 0,
        "column": 2,
        "line": 4,
        "offset": 69,
      },
      "start": {
        "_bufferIndex": 68,
        "_index": 0,
        "column": 1,
        "line": 4,
        "offset": 68,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 69,
        "_index": 0,
        "column": 2,
        "line": 4,
        "offset": 69,
      },
      "start": {
        "_bufferIndex": 65,
        "_index": 0,
        "column": 4,
        "line": 3,
        "offset": 65,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 75,
        "_index": 0,
        "column": 3,
        "line": 5,
        "offset": 75,
      },
      "start": {
        "_bufferIndex": 71,
        "_index": 0,
        "column": 4,
        "line": 4,
        "offset": 71,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 72,
        "_index": 0,
        "column": 5,
        "line": 4,
        "offset": 72,
      },
      "start": {
        "_bufferIndex": 71,
        "_index": 0,
        "column": 4,
        "line": 4,
        "offset": 71,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 72,
        "_index": 0,
        "column": 5,
        "line": 4,
        "offset": 72,
      },
      "start": {
        "_bufferIndex": 71,
        "_index": 0,
        "column": 4,
        "line": 4,
        "offset": 71,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 73,
        "_index": 0,
        "column": 1,
        "line": 5,
        "offset": 73,
      },
      "start": {
        "_bufferIndex": 72,
        "_index": 0,
        "column": 5,
        "line": 4,
        "offset": 72,
      },
      "type": "lineEnding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 73,
        "_index": 0,
        "column": 1,
        "line": 5,
        "offset": 73,
      },
      "start": {
        "_bufferIndex": 72,
        "_index": 0,
        "column": 5,
        "line": 4,
        "offset": 72,
      },
      "type": "lineEnding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 74,
        "_index": 0,
        "column": 2,
        "line": 5,
        "offset": 74,
      },
      "start": {
        "_bufferIndex": 73,
        "_index": 0,
        "column": 1,
        "line": 5,
        "offset": 73,
      },
      "type": "codeTextData",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 74,
        "_index": 0,
        "column": 2,
        "line": 5,
        "offset": 74,
      },
      "start": {
        "_bufferIndex": 73,
        "_index": 0,
        "column": 1,
        "line": 5,
        "offset": 73,
      },
      "type": "codeTextData",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 75,
        "_index": 0,
        "column": 3,
        "line": 5,
        "offset": 75,
      },
      "start": {
        "_bufferIndex": 74,
        "_index": 0,
        "column": 2,
        "line": 5,
        "offset": 74,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 75,
        "_index": 0,
        "column": 3,
        "line": 5,
        "offset": 75,
      },
      "start": {
        "_bufferIndex": 74,
        "_index": 0,
        "column": 2,
        "line": 5,
        "offset": 74,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 75,
        "_index": 0,
        "column": 3,
        "line": 5,
        "offset": 75,
      },
      "start": {
        "_bufferIndex": 71,
        "_index": 0,
        "column": 4,
        "line": 4,
        "offset": 71,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 117,
        "_index": 0,
        "column": 14,
        "line": 8,
        "offset": 116,
      },
      "start": {
        "_bufferIndex": 83,
        "_index": 0,
        "column": 6,
        "line": 7,
        "offset": 83,
      },
      "type": "codeText",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 84,
        "_index": 0,
        "column": 7,
        "line": 7,
        "offset": 84,
      },
      "start": {
        "_bufferIndex": 83,
        "_index": 0,
        "column": 6,
        "line": 7,
        "offset": 83,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 84,
        "_index": 0,
        "column": 7,
        "line": 7,
        "offset": 84,
      },
      "start": {
        "_bufferIndex": 83,
        "_index": 0,
        "column": 6,
        "line": 7,
        "offset": 83,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 103,
        "_index": 0,
        "column": 26,
        "line": 7,
        "offset": 103,
      },
      "start": {
        "_bufferIndex": 84,
        "_index": 0,
        "column": 7,
        "line": 7,
        "offset": 84,
      },
      "type": "codeTextData",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 103,
        "_index": 0,
        "column": 26,
        "line": 7,
        "offset": 103,
      },
      "start": {
        "_bufferIndex": 84,
        "_index": 0,
        "column": 7,
        "line": 7,
        "offset": 84,
      },
      "type": "codeTextData",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 104,
        "_index": 0,
        "column": 1,
        "line": 8,
        "offset": 104,
      },
      "start": {
        "_bufferIndex": 103,
        "_index": 0,
        "column": 26,
        "line": 7,
        "offset": 103,
      },
      "type": "lineEnding",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 104,
        "_index": 0,
        "column": 1,
        "line": 8,
        "offset": 104,
      },
      "start": {
        "_bufferIndex": 103,
        "_index": 0,
        "column": 26,
        "line": 7,
        "offset": 103,
      },
      "type": "lineEnding",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 116,
        "_index": 0,
        "column": 13,
        "line": 8,
        "offset": 115,
      },
      "start": {
        "_bufferIndex": 104,
        "_index": 0,
        "column": 1,
        "line": 8,
        "offset": 104,
      },
      "type": "codeTextData",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 116,
        "_index": 0,
        "column": 13,
        "line": 8,
        "offset": 115,
      },
      "start": {
        "_bufferIndex": 104,
        "_index": 0,
        "column": 1,
        "line": 8,
        "offset": 104,
      },
      "type": "codeTextData",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 117,
        "_index": 0,
        "column": 14,
        "line": 8,
        "offset": 116,
      },
      "start": {
        "_bufferIndex": 116,
        "_index": 0,
        "column": 13,
        "line": 8,
        "offset": 115,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 117,
        "_index": 0,
        "column": 14,
        "line": 8,
        "offset": 116,
      },
      "start": {
        "_bufferIndex": 116,
        "_index": 0,
        "column": 13,
        "line": 8,
        "offset": 115,
      },
      "type": "codeTextSequence",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 117,
        "_index": 0,
        "column": 14,
        "line": 8,
        "offset": 116,
      },
      "start": {
        "_bufferIndex": 83,
        "_index": 0,
        "column": 6,
        "line": 7,
        "offset": 83,
      },
      "type": "codeText",
    },
  ],
]
`;
